xboxdrv 0.4.13 - (13/Mai/2010)
==============================

* added --mimic-xpad
* added --no-extra-devices


xboxdrv 0.4.12 - (08/Mai/2010)
==============================

* added --four-way-restrictor
* added --dpad-rotation
* added proper man pages for xboxdrv and xboxdrv-daemon


xboxdrv 0.4.11 - (01/Mai/2010)
==============================

* added --axis-sensitivity
* added number aliases for button names
* added left/right/up/down aliases for dpad
* some compiler warnings got cleaned up
* confusing uinput error messages got cleaned up
* fixed missing 'report sync' event that broke keyboard emulation


xboxdrv 0.4.10 - (17/Feb/2010)
==============================

* fixed mouse emulation a bit, still somewhat broken
* Mad Catz Xbox 360 controller support
* Harmonix controller support
* minor compile fix (missing string.h)


xboxdrv 0.4.9 - (01/Nov/2009)
=============================

* Saitek P2500 support (no rumble, untested)
* Hori Real Arcade Pro Ex support
* changes in the thread handling to reduce latency
* include fixes for g++-4.4


xboxdrv 0.4.8 - (30/Jul/2009)
=============================

* usb reading in separate thread, should fix missed events and stuck buttons
* some SCons configuration magic for better compatibility


xboxdrv 0.4.7 - (29/Jul/2009)
=============================

* support for Pelican TSZ360 pad
* support for Saitek P3200 pad
* support for Thrustmaster Firestorm Dual Power (044f:b312)
* deadzone support for trigger via --deadzone-trigger NUM
* some documentation improvements


xboxdrv 0.4.6 - (21/Feb/2009)
=============================

* --calibration AXIS=MIN,CENTER,MAX option to workaround broken controller
* xboxdrv-daemon.py to launch xboxdrv automatically when device gets
  plugged in


xboxdrv 0.4.5 - (15/Feb/2009)
=============================

* fixed mixup between strong and weak rumble
* added Harmonix Drum Kit for Xbox 360 support
* added Logitech Chillstream support