@@ -5,7 +5,7 @@
 \\$2 \(la\\$1\(ra\\$3
 ..
 .if \n(.g .mso www.tmac
-.TH "xboxdrv-daemon " 1 2010-05-13 0.4.13 "User Commands"
+.TH "xboxdrv-daemon " 1 2010-05-13 0.4.14 "User Commands"
 .SH NAME
 xboxdrv-daemon
 \- A simple daemon that automatically launches xboxdrv when it detects a controller. 
